playing with forms

--- a/forms.html
+++ b/forms.html
@@ -6,6 +6,26 @@
 </head>
 <body>
 
+<input type= "date" name= "date">
+<br>
+
+<input type= "datetime" name= "#">
+<br>
+
+
+<input type= "color" id= "#"name= "#">
+<br>
+
+<input type= "number" name= "#">
+<br>
+
+<input type= "range" name= "#" min="0" max="100">
+<br>
+
+email
+<input type= "email" name= "#">
+<br>
+
 
 
 </body>
