playing with forms

--- a/forms.html
+++ b/forms.html
@@ -6,26 +6,51 @@
 </head>
 <body>
 
-<input type= "date" name= "date">
+<input type="date" name="date">
 <br>
 
-<input type= "datetime" name= "#">
+<input type="datetime" name="#">
 <br>
 
 
-<input type= "color" id= "#"name= "#">
+<input type="color" id="#" name="#">
 <br>
 
-<input type= "number" name= "#">
+<input type="number" name="#">
 <br>
 
-<input type= "range" name= "#" min="0" max="100">
+<input type="range" name="#" min="0" max="100">
 <br>
 
 email
-<input type= "email" name= "#">
+<input type="email" name="#">
 <br>
 
+<input type="search" name="#">
+
+<input type="month" name="#">
+
+<input type="time" name="#">
+
+<input type="url" name="#">
+
+<input type="week" name="#">
+
+<form action="keygen.html" method="get"><input type="text" name="username">
+    <keygen name="security"/>
+    <input type="submit">
+</form>
+
+<p>
+
+<form onsubmit="return false"
+      oninput="o.value=parseInt(a.value)+parseInt(b.value)">
+    <input name="a" type="number" step="any">+
+    <input name="b" type="number" step="any">
+    =
+    <output name="o"></output>
+</form>
+</p>
 
 
 </body>
