--- a/forms.html
+++ b/forms.html
@@ -6,52 +6,90 @@
 </head>
 <body>
 
-<input type="date" name="date">
-<br>
+<!--<input type="date" name="date">-->
+<!--<br>-->
 
-<input type="datetime" name="#">
-<br>
+<!--<input type="datetime" name="#">-->
+<!--<br>-->
 
 
-<input type="color" id="#" name="#">
-<br>
+<!--<input type="color" id="#" name="#">-->
+<!--<br>-->
 
-<input type="number" name="#">
-<br>
+<!--<input type="number" name="#">-->
+<!--<br>-->
 
-<input type="range" name="#" min="0" max="100">
-<br>
+<!--<input type="range" name="#" min="0" max="100">-->
+<!--<br>-->
 
-email
-<input type="email" name="#">
-<br>
+<!--email-->
+<!--<input type="email" name="#">-->
+<!--<br>-->
 
-<input type="search" name="#">
+<!--<input type="search" name="#">-->
 
-<input type="month" name="#">
+<!--<input type="month" name="#">-->
 
-<input type="time" name="#">
+<!--<input type="time" name="#">-->
 
-<input type="url" name="#">
+<!--<input type="url" name="#">-->
 
-<input type="week" name="#">
+<!--<input type="week" name="#">-->
 
-<form action="keygen.html" method="get"><input type="text" name="username">
-    <keygen name="security"/>
-    <input type="submit">
-</form>
+<!--<form action="keygen.html" method="get"><input type="text" name="username">-->
+    <!--<keygen name="security"/>-->
+    <!--<input type="submit">-->
+<!--</form>-->
 
-<p>
+<!--<p>-->
 
-<form onsubmit="return false"
-      oninput="o.value=parseInt(a.value)+parseInt(b.value)">
-    <input name="a" type="number" step="any">+
-    <input name="b" type="number" step="any">
-    =
-    <output name="o"></output>
-</form>
-</p>
+<!--<form onsubmit="return false"-->
+      <!--oninput="o.value=parseInt(a.value)+parseInt(b.value)">-->
+    <!--<input name="a" type="number" step="any">+-->
+    <!--<input name="b" type="number" step="any">-->
+    <!--=-->
+    <!--<output name="o"></output>-->
+<!--</form>-->
+<!--</p>-->
 
+
+<fieldset>
+    <legend class="legend">Personal Information</legend>
+    <div>
+        <label for="name">Name</label><br>
+        <input type="text" placeholder="First" autofocus> <input type="text" placeholder="Last">
+    </div><br>
+    <div>
+        <label for="dob">Date of Birth</label><br> <input type="date" value="">
+    </div>
+    <div class="gender">
+        <label for="gender">Gender</label><br>
+        <input type="radio" name="gender"><label>Male</label> <input type="radio" name="gender"><label>Female</label>
+    </div><br>
+    <div>
+        <label for="address">Address</label><br>
+        <input type="text" class="textboxAddress" placeholder="Street
+Address"><br>
+        <input type="text" class="textboxAddress" placeholder="Address
+         Line 2"><br>
+        <input type="text" class="textboxAddressDetail"
+               placeholder="City">
+        <input type="text" class="textboxAddressDetail"
+               placeholder="State/Province"><br>
+        <input type="text" class="textboxAddressDetail"
+               placeholder="Pincode"> <select class="selectOption">
+        <option value="Country">Select Country</option>
+    </select>
+    </div><br>
+    <div>
+        <label for="contact">Phone Number</label><br> <input type="tel" class="textboxAddressDetail"
+                                                             placeholder="Home">
+        <input type="tel" class="textboxAddressDetail"
+               placeholder="Work"> </div><br>
+    <div>
+        <label for="email">Email Address</label><br> <input type="email" class="textboxAddressDetail"
+                                                            placeholder="email@example.com"> </div>
+</fieldset>
 
 </body>
 </html>
