html5 validate controls

--- a/validate_test.html
+++ b/validate_test.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script>
+        function validateInput() {
+            var bool1 = document.getElementById('handbook1').validity.customError;
+            var result1 = document.getElementById('result1').innerHTML = bool1;
+        }
+    </script>
 </head>
 <body>
 <form name="Field" action="#">
     First name: <input type="text" name="fname" required>
     <input type="submit" value="Submit">
 </form>
+
+<input type="text" id="handbook1">
+<div>
+    <label>Result1:</label>
+    <output id="result1"></output>
+</div>
+<input type="button" value="Validate" onclick="validateInput()">
 </body>
 </html>
