--- a/css-test.html
+++ b/css-test.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        li:nth-last-of-type(2) {
+        li:nth-of-type(3) {
             background-color: red;
+        }
+        li:nth-of-type(2) {
+            background-color: cornflowerblue;
+        }
+        li:nth-last-of-type(1) {
+            background-color: palegoldenrod;
         }
     </style>
 </head>
