--- a/css-test.html
+++ b/css-test.html
@@ -7,6 +7,11 @@
         /*li:nth-of-type(3) {*/
             /*background-color: red;*/
         /*}*/
+        li {
+            background-color: #3b414c;
+            color: white;
+            opacity: 0.5;
+        }
         li:not(:first-child) {
             background-color: blanchedalmond;
         }
