--- a/css-test.html
+++ b/css-test.html
@@ -7,6 +7,10 @@
         /*li:nth-of-type(3) {*/
             /*background-color: red;*/
         /*}*/
+        h1 {
+            text-shadow: 0 3px 0 black;
+            color: pink;
+        }
         li {
             background-color: #3b414c;
             color: white;
@@ -58,6 +62,7 @@
     </style>
 </head>
 <body>
+<h1>Header</h1>
 <p>
     Content
 </p>
