--- a/css-test.html
+++ b/css-test.html
@@ -12,8 +12,11 @@
         }
 
         h1 {
-            text-shadow: 0 3px 0 black;
-            color: pink;
+            /*text-shadow: 0 3px 0 black;*/
+            font-family: Helvetica;
+            font-size: 40px;
+            -webkit-text-stroke: 1px black;
+            color: orangered;
         }
 
         li {
