css text attributes

--- a/css-test.html
+++ b/css-test.html
@@ -15,8 +15,16 @@
             /*text-shadow: 0 3px 0 black;*/
             font-family: Helvetica;
             font-size: 40px;
+            font-weight: bold;
+            font-style: oblique;
+            text-transform: uppercase;
+            text-decoration: underline;
+            letter-spacing: 1em;
+            line-height: 1em;
+            text-align: right;
+            vertical-align: baseline;
             -webkit-text-stroke: 1px black;
-            color: orangered;
+            color: dimgray;
         }
 
         li {
