--- a/css-test.html
+++ b/css-test.html
@@ -86,6 +86,19 @@
             height: 100px;
             bottom: 0;
         }
+        a:link {
+            color: #dd6666;
+        }
+        a:visited {
+            color: black;
+        }
+        a:hover {
+            color: deeppink;
+        }
+        a:active {
+            color:darkcyan;
+        }
+
     </style>
 </head>
 <body>
