css text attributes

--- a/css-test.html
+++ b/css-test.html
@@ -99,6 +99,23 @@
             color:darkcyan;
         }
 
+
+        input.submit:hover {
+            background-color: black;
+        }
+
+        input.submit:active {
+            background-color: chocolate;
+        }
+
+        input.text {
+
+        }
+
+        input.text:focus {
+            color: #dd6666;
+        }
+
     </style>
 </head>
 <body>
