css text attributes

--- a/css-test.html
+++ b/css-test.html
@@ -116,6 +116,12 @@
             color: #dd6666;
         }
 
+        /*p[class="dog"] - equality*/
+        /*p[class~="dog"] - space*/
+        /*p[attr^"d"]  - prefix*/
+        /*p[attr*"do"] - substring*/
+        /*p[attr$"g"] - suffix*/
+
     </style>
 </head>
 <body>
