css box attributes

--- a/css-test.html
+++ b/css-test.html
@@ -11,6 +11,17 @@
             background: white;
         }
 
+        div {
+            height:300px;
+            width: 400px;
+        }
+
+        p {
+            height:75%;
+            width:75%;
+            background-color: #dddddd;
+        }
+
         h1 {
             /*text-shadow: 0 3px 0 black;*/
             font-family: Helvetica;
@@ -126,9 +137,11 @@
 </head>
 <body>
 <h1>Header</h1>
-<p>
-    Content
-</p>
+<div>
+    <p>
+        Content
+    </p>
+</div>
 <div class="box">
     <ol>
         <li>item 1</li>
