css box attributes

--- a/css-test.html
+++ b/css-test.html
@@ -14,6 +14,8 @@
         div {
             height:300px;
             width: 400px;
+            min-width:300px;
+            min-height:200px;
         }
 
         p {
@@ -22,6 +24,13 @@
             background-color: #dddddd;
         }
 
+        p.one {
+            overflow: hidden;
+        }
+
+        p.two {
+            overflow: scroll;
+        }
         h1 {
             /*text-shadow: 0 3px 0 black;*/
             font-family: Helvetica;
