css box attributes

--- a/css-test.html
+++ b/css-test.html
@@ -17,12 +17,19 @@
             min-width:300px;
             min-height:200px;
         }
-
+            /* border - everybox has a border.*/
+            /* margin - sits outside the edge of the border.*/
+            /* padding - space between the border and content contained within it.*/
         p {
             height:75%;
             width:75%;
             background-color: #dddddd;
+            border-width: 2px; /*or thick or 1px 4px 12px 4px*/
+            border-style: solid; /*  dotted dashed double groove ridge inset outset*/
+            border-color: rosybrown;
+            /*border: width style color;*/
         }
+
 
         p.one {
             overflow: hidden;
